<resources>
    <string name="app_name">手机卫士</string>


    <string name="cpu">CPU</string>
    <string name="memory">内存</string>

    <string name="puzzle_draw_hint">请绘制解锁图案</string>
    <string name="setup_puzzle_password">设置解锁图案</string>
    <string name="check_puzzle_password">再次绘制解锁图案</string>
    <string name="puzzle_password_dismatch">解锁图案不一致，请重新绘制</string>
    <string name="start_find_lost">开启手机防盗</string>
    <string name="password_wrong">密码错误，请重新输入</string>
    <string name="add_phone_num">添加亲友号码，可发送短信到被盗手机</string>
    <string name="add_phone_num_hint">提示：SIM卡被更换时将自动向您的亲友号码发送短信通知，由此产生的费用由运营商收取</string>
    <string name="backup_phone_num">短信备份防盗指令到亲友号码</string>
    <string name="find_cmd_gps">GPS定位：#dingwei#</string>
    <string name="find_cmd_music">播放报警音乐：#jingbao#</string>
    <string name="find_cmd_delete">远程删除数据：#shanchu#</string>
    <string name="find_cmd_lock">远程锁定：#suoding#</string>
    <string name="done">完成</string>
    <string name="phone_num">亲友号码</string>


    <string name="func_protection">手机防盗</string>
    <string name="func_speed_up">一键加速</string>
    <string name="func_app_manager">软件管理</string>
    <string name="func_defend">骚扰拦截</string>
    <string name="func_app_lock">程序锁</string>
    <string name="func_virus">病毒查杀</string>
    <string name="func_clean_cache">缓存清理</string>
    <string name="func_check">硬件检测</string>
    <string name="func_location">归属地查询</string>
    <string name="func_qrcode">安全扫码</string>
    <string name="func_net_speed">网络测速</string>
    <string name="func_backup">安全备份</string>


    <!-- 防盗状态 -->
    <string name="open_uninstall">防卸载功能</string>
    <string name="already_setup_password">已设置</string>
    <string name="phone_num_error">手机号码格式不正确</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="contact">联系人</string>
    <string name="android_version">Android版本：</string>
    <string name="phone_name">手机名称：</string>
    <string name="uninstall">卸载</string>
    <string name="system_app">系统软件</string>
    <string name="user_app">个人软件</string>
    <string name="uninstall_system_hint">系统软件需要有root权限后才可以被卸载</string>
    <string name="blacknum_mode_phone">电话拦截</string>
    <string name="blacknum_mode_text">短信拦截</string>
    <string name="blacknum_mode_all">电话和短信拦截</string>
    <string name="blacknum">黑名单号码</string>
    <string name="phone">电话</string>
    <string name="text">短信</string>
    <string name="blacknum_empty">黑名单号码不能为空</string>
    <string name="nothing">这里什么也没有</string>
    <string name="unlocked">未加锁</string>
    <string name="locked">已加锁</string>
    <string name="query">查询</string>
    <string name="number_empty">号码不能为空</string>
    <string name="stop">停止</string>
    <string name="last_scan">上次扫描：</string>
    <string name="never_scanned">未扫描</string>
    <string name="scanning">正在扫描：</string>
    <string name="scan_result">扫描结果：</string>
    <string name="safe">安全</string>
    <string name="completed">完成</string>
    <string name="restart_scan">重新扫描</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
