<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SetupPhoneNumActivity">


    <include layout="@layout/layout_toolbar"/>

    <TextView
        android:layout_margin="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_phone_num"/>

    <EditText
        android:id="@+id/et_setup_phone_num"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_edit_text"
        android:drawableRight="@drawable/icon_contact_num"
        android:paddingRight="5dp"
        android:maxLength="11"
        android:hint="@string/phone_num"
        android:inputType="phone" />

    <TextView
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_phone_num_hint"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <CheckBox
            android:id="@+id/cb_setup_phone_backup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backup_phone_num"/>

    </LinearLayout>

    <TextView
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_cmd_gps"/>

    <TextView
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_cmd_music"/>

    <TextView
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_cmd_delete"/>

    <TextView
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_cmd_lock"/>


    <Button
        android:id="@+id/btn_setup_phone_active"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="点击激活超级管理员，激活后可以远程锁屏，清除数据" />

    <Button
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/btn_setup_phone_done"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:textColor="@android:color/white"
        android:background="@drawable/round_button"/>


</LinearLayout>
