<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="260dp"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    android:gravity="center"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/et_add_black_num"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_edit_text"
        android:drawableRight="@drawable/icon_contact_num"
        android:paddingRight="5dp"
        android:maxLength="11"
        android:hint="@string/blacknum"
        android:inputType="phone" />

    <RadioGroup
        android:id="@+id/rg_add_black_num"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_height="wrap_content">


        <RadioButton
            android:id="@+id/rb_add_black_num_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/phone"/>

        <RadioButton
            android:id="@+id/rb_add_black_num_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/text"/>

        <RadioButton
            android:id="@+id/rb_add_black_num_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_marginLeft="5dp"
            android:text="全部"/>


    </RadioGroup>

    <include layout="@layout/layout_cancel_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"/>



</LinearLayout>
